--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div id="nav-container">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">About</a>
-                <a href="#">Projects</a>
-                <a href="#" id="contact-card">Contact</a>
+                <a href="#about-wrapper">About</a>
+                <a href="#projects-wrapper">Projects</a>
+                <a href="#contact-wrapper" id="contact-card">Contact</a>
             </nav>
         </div>
     </header>
