--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2>About Me</h2>
             <p>
                 I'm an emerging software developer with hands-on experience and a strong foundation in modern development practices. 
-                Currently completing my bachelor's degree, I’m focused on building efficient, forward-thinking solutions and continuously expanding my skills.
+                Currently completing my bachelor's degree, I'm passionate about building useful, thoughtful solutions and always looking for new ways to grow and improve.
             </p>
         </div>
 
