--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
     <div id="projects-wrapper">
 
         <div id="projects-heading">
-            <h2>Projects (Coming Soon)</h2>
+            <h2>Projects (More Coming Soon...)</h2>
         </div>
 
 
         <div id="projects-card">
 
 
-            <!-- <div class="project-tile">Project 1</div>
-            <div class="project-tile">Project 2</div>
+            <a href="https://jwitzz.github.io/timeCardApp/"><div class="project-tile">Time Card App</div></a>
+            <!-- <div class="project-tile">Project 2</div>
             <div class="project-tile">Project 3</div>
             <div class="project-tile">Project 4</div>
             <div class="project-tile">Project 5</div>
