--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
 
             <a href="https://jwitzz.github.io/timeCardApp/"><div class="project-tile">Time Card App</div></a>
-            <!-- <div class="project-tile">Project 2</div>
-            <div class="project-tile">Project 3</div>
+            <a href="https://easdesignbuilders.com/"><div class="project-tile">EAS Design Builders Website</div></a>
+            <!-- <div class="project-tile">Project 3</div>
             <div class="project-tile">Project 4</div>
             <div class="project-tile">Project 5</div>
             <div class="project-tile">Project 6</div> -->
